--- a/CompleteNodejs/Section3-4/package.json
+++ b/CompleteNodejs/Section3-4/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "validator": "^13.1.1"
+    "chalk": "^4.1.0",
+    "validator": "^13.1.1",
+    "yargs": "^12.0.2"
   }
 }
